fix extra padding and mobile bg image

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -32,6 +32,8 @@
 
 
     &-logo &-logo:hover{
+        display: block;
+
         font-size: 0rem;
         > img {
             height: 20px;
