--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,6 +1,6 @@
 .hero{
     border: 1px solid red;
-    padding-top:3.75rem;
+    padding-top:3.3125rem;
     &-image{
         position: relative;
         padding: 0;
@@ -16,12 +16,12 @@
             transform: translate(-50%);
 
             content: "";
-            height: 100%;
+            height: 104%;
             width: 100%; 
             background-image: url("../../images/image-mockups.png");
             background-repeat: no-repeat;
             background-position: center bottom;
-            background-size: 87%;
+            background-size: 90%;
         }
     }
     &-text{
