--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -148,6 +148,7 @@ a, a:visited, a:hover {
   transform: rotate(-45deg);
 }
 .header-logo .header-logo:hover {
+  display: block;
   font-size: 0rem;
 }
 .header-logo .header-logo:hover > img {
@@ -239,7 +240,7 @@ nav {
 
 .hero {
   border: 1px solid red;
-  padding-top: 3.75rem;
+  padding-top: 3.3125rem;
 }
 .hero-image {
   position: relative;
@@ -255,12 +256,12 @@ nav {
   left: 50%;
   transform: translate(-50%);
   content: "";
-  height: 100%;
+  height: 104%;
   width: 100%;
   background-image: url("../../images/image-mockups.png");
   background-repeat: no-repeat;
   background-position: center bottom;
-  background-size: 87%;
+  background-size: 90%;
 }
 .hero-text {
   padding: 1.875rem;
